# src/Backlog.Api/Controllers/DigitalAssetController.cs
@@ -2,6 +2,7 @@ using Backlog.Core;
 using MediatR;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using System;
 using System.Net;
 using System.Threading.Tasks;
 
@@ -21,16 +22,22 @@ namespace Backlog.Api.Controllers
         [ProducesResponseType((int)HttpStatusCode.InternalServerError)]
         [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
         [ProducesResponseType(typeof(GetDigitalAssetsPageResponse), (int)HttpStatusCode.OK)]
-        public async Task<ActionResult<GetDigitalAssetsPageResponse>> Page([FromRoute] GetDigitalAssetsPageRequest request)
-            => await _mediator.Send(request);
+        public async Task<ActionResult<GetDigitalAssetsPageResponse>> Page([FromRoute] int pageSize, [FromRoute] int index)
+        {
+            var request = new GetDigitalAssetsPageRequest { Index = index, PageSize = pageSize };
+
+            return await _mediator.Send(request);
+        }
 
         [HttpGet("{digitalAssetId}", Name = "GetDigitalAssetById")]
         [ProducesResponseType((int)HttpStatusCode.InternalServerError)]
         [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
         [ProducesResponseType(typeof(GetDigitalAssetByIdResponse), (int)HttpStatusCode.OK)]
         [ProducesResponseType(typeof(string), (int)HttpStatusCode.NotFound)]
-        public async Task<ActionResult<GetDigitalAssetByIdResponse>> GetById([FromRoute] GetDigitalAssetByIdRequest request)
+        public async Task<ActionResult<GetDigitalAssetByIdResponse>> GetById([FromRoute] Guid digitalAssetId)
         {
+            var request = new GetDigitalAssetByIdRequest {  DigitalAssetId = digitalAssetId };
+
             var response = await _mediator.Send(request);
 
             if (response.DigitalAsset == null)
@@ -41,9 +48,13 @@ namespace Backlog.Api.Controllers
             return response;
         }
 
-        [HttpGet("range",Name = "GetDigitalAssetsByIds")]
-        public async Task<ActionResult<GetDigitalAssetsByIdsResponse>> GetByIds([FromQuery] GetDigitalAssetsByIdsRequest request)
-            => await _mediator.Send(request);
+        [HttpGet("range", Name = "GetDigitalAssetsByIds")]
+        public async Task<ActionResult<GetDigitalAssetsByIdsResponse>> GetByIds([FromQuery] Guid[] digitalAssetIds)
+        {
+            var request = new GetDigitalAssetsByIdsRequest {  DigitalAssetIds = digitalAssetIds };
+
+            return await _mediator.Send(request);
+        }
 
         [HttpPost("upload", Name = "UploadDigitalAsset"), DisableRequestSizeLimit]
         public async Task<ActionResult<UploadDigitalAssetResponse>> Save()
@@ -54,8 +65,10 @@ namespace Backlog.Api.Controllers
         [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
         [ProducesResponseType(typeof(FileContentResult), (int)HttpStatusCode.OK)]
         [ProducesResponseType((int)HttpStatusCode.NotFound)]
-        public async Task<IActionResult> Serve([FromRoute] GetDigitalAssetByIdRequest request)
+        public async Task<IActionResult> Serve([FromRoute] Guid digitalAssetId)
         {
+            var request = new GetDigitalAssetByIdRequest { DigitalAssetId = digitalAssetId };
+
             var response = await _mediator.Send(request);
 
             if (response.DigitalAsset == null)
@@ -69,7 +82,11 @@ namespace Backlog.Api.Controllers
         [ProducesResponseType((int)HttpStatusCode.InternalServerError)]
         [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
         [ProducesResponseType(typeof(RemoveDigitalAssetResponse), (int)HttpStatusCode.OK)]
-        public async Task<ActionResult<RemoveDigitalAssetResponse>> Remove([FromRoute] RemoveDigitalAssetRequest request)
-            => await _mediator.Send(request);
+        public async Task<ActionResult<RemoveDigitalAssetResponse>> Remove([FromRoute] Guid digitalAssetId)
+        {
+            var request = new RemoveDigitalAssetRequest { DigitalAssetId = digitalAssetId };
+
+            return await _mediator.Send(request);
+        }
     }
 }
